# SMSnet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: classify.h  flow_color_coder.h  hdf5_reader.h
mean/: mean.binaryproto
model_description/: deploy_2class_city.prototxt  deploy_2class_kitti.prototxt
src/: .classify.cpp.swo  classify.cpp  flow_color_coder.cpp  hdf5_reader.cpp  main.cpp
